--- a/hello-world-servlet/pom.xml
+++ b/hello-world-servlet/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.redhat.jws</groupId>
+    <groupId>com.redhat.jws.quickstart</groupId>
     <artifactId>hello</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -41,7 +41,7 @@
                 </executions>
 
                 <configuration>
-                    <mainClass>com.redhat.jws.HelloApplication</mainClass>
+                    <mainClass>com.redhat.jws.quickstart.HelloApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
