--- a/tomcat-vault-example/pom.xml
+++ b/tomcat-vault-example/pom.xml
@@ -15,8 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <!--<tomcat-version>7.0.70.redhat-13</tomcat-version>-->
-        <tomcat-version>8.0.36.redhat-24</tomcat-version>
+        <tomcat-version>8.5.20</tomcat-version>
     </properties>
 
     <dependencies>
@@ -28,7 +27,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-vault</artifactId>
-            <version>1.1.3.Final-redhat-1</version>
+            <version>1.1.3.Final</version>
         </dependency>
     </dependencies>
 
