Default to using community tomcat instead of JWS tomcat; I'll add a maven profile or something to use JWS later

--- a/tomcat-vault-example/pom.xml
+++ b/tomcat-vault-example/pom.xml
@@ -15,7 +15,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <tomcat-version>8.5.20</tomcat-version>
+        <!-- Note that 8.5.23 doesn't exist yet...I was testing this feature with a dev build -->
+        <tomcat-version>8.5.23</tomcat-version>
     </properties>
 
     <dependencies>
