--- a/hello-world-servlet/pom.xml
+++ b/hello-world-servlet/pom.xml
@@ -15,8 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <!--<tomcat-version>7.0.70.redhat-13</tomcat-version>-->
-        <tomcat-version>8.0.36.redhat-14</tomcat-version>
+        <tomcat-version>8.0.36</tomcat-version>
     </properties>
 
     <dependencies>
